# fake-program

./: .gitignore  LICENSE  README.adoc  fake-program.1.in  fake-program.service.in  main.c  meson.build
